FLSAM ChangeLog

<Future date> v 0.43-1
 * Addition of coef method to extract fitted parameters from FLSAM object  
 * Added vcov matrix to FLSAM class
 * Truncated NSH objects so that they fit in a reasonable amount of time

2012-02-01 v 0.43
 * Added timeout argument to FLSAM.control to allow manual control over this
   value

2012-02-01 v 0.42
 * Added method for plotting FLSAMs.
 * Added method for plotting FLSAM/FLSAMs together with a single FLStock
 * Added method for plotting two FLSAM objects in one command
 * Passed ... option to plotting methods, allowing for customisation of plots
 * Added drop.from.control() function to quickly throw out a survey or age group
 * Minor modification to FLSAM.control() to take names from consistent place
 * Corrected bug in FLSAM() batch.mode that meant it wasn't trapping errors
   correctly.
 * Rewrote fleet parameter accessor functions to use one common extraction
   function and thereby fix various nuisance errors

2012-01-30 v 0.41
 * Increased SAM timeout to 7200s (120 mins)
 * Split runSAM() functionality out of FLSAM() into separate function
 * Fixed bug in situations where all states are bound together 

2011-11-11 v 0.40
 * Help files all round! (Issue 13) 
 * Addition of FLSAMs plural class (Issue 14)
 * Autoconfiguration in FLSAM.control() now has the option of taking a
   reasonable first guess at a configuration, or leaving configuration
   completely blank (see "default" argument). (Issue 11)
 * Fixed bug in FLR2SAM that was not writing obs.dat correctly for SSB indices
 * Redefined accessor functions for ssb, tsb, rec, fbar to return a data frame
   rather than the previous FLQuant objects. Added n, f, and catch accessors. 
 * Added looi() function for doing leave-one-in/leave-one-out runs, and a
   retro function for doing retrospective runs (Issues 16 and 28)
 * All accessor functions methods are overloaded for both FLSAM and FLSAMs objects.