@@ -4,6 +4,7 @@ FLSAM ChangeLog
  * Addition of coef method to extract fitted parameters from FLSAM object  
  * Added vcov matrix to FLSAM class
  * Truncated NSH objects so that they fit in a reasonable amount of time
+ * Added title option to residual.diagnostics
 
 2012-02-01 v 0.43
  * Added timeout argument to FLSAM.control to allow manual control over this
